<resources>
    <string name="app_name">Bhopal BRTS</string>
    <string name="version">version 1.1.1 (Naina)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_bus">Bus</string>
    <string name="title_fare">Fare</string>
    <string name="title_route">Route</string>
    <string name="title_more">More</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="hint_startst">Enter Origin</string>
    <string name="hint_destst">Enter Destination</string>
    <string name="action_info">Info</string>
    <string name="SearchRoute">Search Route</string>
    <string name="getFare">Get Fare</string>
    <string name="title_activity_select_stop">Select Bus Stop</string>
    <string name="typeToSearch">Type to Search</string>
    <string name="Fare">Fare :</string>
    <string name="title_activity_route_detail">Route Detail</string>
    <string name="title_activity_card_detail">Route Detail</string>
    <string name="action_map">Map</string>
    <string name="action_list">Detail</string>
    <string name="title_activity_launche">Bhopal BRTS</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="title_activity_about_brts">About BRTS</string>
    <string name="title_activity_about_devloper">About Devlopers</string>
    <string name="action_share">Share App</string>
    <string name="local_police">100</string>
    <string name="about_us_detail">We are group of  students with common motive to solve common problem with the help of technology (Praudyogiki aka Jugad) available .  </string>
    <string name="bhopal_brts_detail">
        <![CDATA[
            <p><strong>BHOPAL,</strong> the capital of Madhya Pradesh, is a fascinating  amalgamation of scenic beauty, old historic flavor and modern urban planning.  It is also known as the “City of Lakes”. Today Bhopal has blossomed into a  city, which in spite of being modern, upholds the patrician mark of its bygone  rulers.  </p>
        <p>To answer the needs of the growing  traffic and to ensure that people move around in the city in an efficient and  comfortable manner. A <strong>Special Purpose  Vehicle (SPV)</strong> in the name of <strong>Bhopal  City Link Ltd (BCLL)</strong> is majorly owned company of <strong>Bhopal Municipal Corporation</strong>, incorporated in 2006 to provide an  organized dimensions to public transportation of Bhopal, a city on fast track  of development with honorable Mayor at its chain and Municipal Commissioner as  Managing Director supported by an independent Chief Executive Officer (CEO).  BCLL has been successful in fulfilling the municipal responsibility of  providing Motor Transport facility for the conveyance of public mandated under  Sec 66 (S) of Municipal Corporation Act. Its Caravan, which begin with just 30  buses in 2006, after receiving JnNURM Sanction, has grown to 225 buses  comprising of AC Low Floor and Super Luxury Volvo Buses. Presently 185  no. of 900 mm floor ht. Buses ; 20 no. of AC 400 mm floor ht. Buses are  plying on the different 12 approved routes of Bhopal city including BRTS route.</p>
        ]]>
    </string>
    <string name="brts_office"><![CDATA[
        <p><b>Bhopal City Link Ltd.</b><br>
        2nd Floor, Harshwardhan Complex,<br>
        Mata Mandir Square, T.T. Nagar,<br>
        <strong>Bhopal (MP) 462003<br>
        OR CALL US:</strong> +91 755-4074843<br>
        <strong>EMAIL US:</strong> <a href="mailto:bcll_bpl@rediffmail.com" target="_blank">bcll_bpl@rediffmail.com</a></p>
    ]]></string>

    <string name="about_app_detail"><![CDATA[
        <p>Credited as one of the first full feature bus information application in the city , <b>Bhopal BRTS</b> serves you with a well organised information regarding the city bus services in the capital.</p>
        <p>Theme of the app is the Theme of this beautiful city . <b>Clean and Green</b> . By use of <b>BRTS</b> not just we are solving the traffic problem but also helping to nature by controlled pollution .</p>
        <p>Treating the need of improvement as a gospel, we welcome your feedback ans suggestions and are obliged to update you with the most recent alterations .</p>
    ]]>
    </string>
    <string name="contact_us_detail"><![CDATA[

        Web         :  <a href="http://seatech.me">seatech.me</a><br>
        Email       :  <a href="mailto:reach2seatech@gmail.com" target="_blank">reach2seatech@gmail.com</a><br>
        Facebook    :  <a href="http://fb.com/bhopalbrts" >fb.com/bhopalbrts </a>


    ]]></string>

    <string name="tandc"><![CDATA[
        <p>The data and specifications mentioned in here are based on information provided by Google Search and BRTS. We share no terms or alliance with My Bus or Bhopal Municipal Corp.</p>
        <p>The data in real time is subject to change. We did our best to compile recent and most accurate data; will be held responsible in no case regarding on spot data changes. Updates for data will be distributed within 2-3 days after the alterations by My Bus.</p>
        <p> Your access to and use of this service is bound by the acceptance and compliance of these terms. These terms apply to all visitors, users and other who use or access the service.</p>
        <p>Termination:<br>
        We may terminate the service anytime, without any notice, with no reason whatsoever if found breaching of the above terms.</p>
    ]]></string>

    <string name="thank"><![CDATA[

        <p>College Institution for encouragement to implement ideas.</p>
        <p>Google and My Bus for providing data required.</p>
        <p>Udacity for providing tutorial support.</p>
        <p>Municipal Corp. Bhopal for provoking the “Clean and Green Theme”.</p>
        <p>Special thanks to the mentors, parents and supporters for guidance, allowance, permissions and resources.</p>
        <p>Shivam Nema, Aditya Upadhyaay , Sanjiv Singh and Varun Singh for testing and contributions.</p>
        <p>Varun Singh for feedback on  Icons.</p>
        <p>Thank you users!</p>
    ]]></string>
    <string name="contact_alam_detail"><![CDATA[
            <p>

        Email       :  <a href="mailto:itisalam@gmail.com" target="_blank">itisalam@gmail.com</a><br>

        </p>
    ]]></string>
    <string name="title_activity_maps">Map</string>
    <string name="content_authority">io.github.yesalam.bhopalbrts</string>



    <string name="error_input_origin">Please enter Origin</string>
    <string name="error_input_destination">Please enter Destination</string>
    <string name="error_origin_unknown">Origin not found</string>
    <string name="error_destination_unknown">Destination not fount</string>
    <string name="error_input_same">You are at destination already</string>


    <string name="brts_widget">BRTS Route</string>
    <string name="about_label" >About</string>
    <string name="contact_label">Contact</string>
    <string name="tc_label">Terms and Condition</string>
    <string name="default_label">Love you</string>
    <string name="aboutus_label">About us</string>
    <string name="contactus_label">Contact us</string>
    <string name="thanku_label">Thank you</string>
    <string name="send_text">Bhopal BRTS is a must have app for MYBUS commuter and Bhopal tourist .\nJust click on the link given below:\nhttps://play.google.com/store/apps/details?id=com.seatech.bhopalbrts\n Don\'t forget to share with your mates..</string>
    <string name="share_via">Share via:</string>
    <string name="tel_indicator">tel:</string>
    <string name="routedetail_label">Route Detail</string>
    <string name="routemap_label">Route Map</string>
    <string name="origin_label">Origin</string>
    <string name="destination_label">Destination</string>
    <string name="changebus_label">Change Bus Here</string>
    <string name="getting_location">Getting your Location....</string>
    <string name="disable_location_message">Your Location is disabled! Would you like to enable it?</string>
    <string name="enable_location">Enable Location</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="no_stops_message">No Stop Found</string>
    <string name="network_lost">Network Lost</string>
    <string name="google_service_disconnect">Google Service Disconnected</string>
    <string name="findroute">Find route button</string>
    <string name="findfare">Find fare button</string>
    <string name="about_bhopal_brts">About Bhopal BRTS</string>
    <string name="contact_brts">Contact BRTS</string>
    <string name="viewtandc">View Terms and Condition</string>
    <string name="about_developers">About Developers</string>
    <string name="contact_developers">Contact Developers</string>
    <string name="select_stop">Select Stop from a list</string>
    <string name="km_label">Km.</string>
    <string name="rupay_sign">`</string>
    <string name="group_name">SeATech</string>
    <string name="slogan">Pragat Praudyogiki Samooh</string>
    <string name="brand_image">BRTS brand image</string>
    <string name="emergency_label">Emergency Nos</string>
    <string name="service_label">Services</string>
    <string name="telephone_label">Telephone</string>
    <string name="local_police_label">Local Police</string>
    <string name="woman_helpline_label">Woman Helpline</string>
    <string name="woman_helpline">1090</string>
    <string name="cm_helpline_label">CM Helpline</string>
    <string name="cm_helpline">181</string>
    <string name="railway_enquiry_label">Railway Enquiry</string>
    <string name="railway_enquiry">131</string>
    <string name="emergency_response_label">Emergency response Services for\nMedical, Fire Brigade and Police</string>
    <string name="emergency_response">108</string>
    <string name="helpline_bcll_label">Helpline NOs - BCLL</string>
    <string name="mybus_helpline_label">MY Bus Helpline</string>
    <string name="mybus_helpline1">+917553199966</string>
    <string name="mybus_helpline2">+917554074843</string>
    <string name="charted_bus_label">Chartered Bus(Volvo)</string>
    <string name="charted_bus_helpline">+919993288888</string>
    <string name="my_cab_label">My Cab(City Taxi Services)</string>
    <string name="my_cab_helpline">+917556666666</string>
    <string name="office_loaction_label">Office Location</string>
    <string name="developer_name">Sadar-e-Alam</string>
    <string name="developer_post">Lead Programmer</string>


</resources>
