<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/emergency_label"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView2" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1"
                android:padding="15dp"
                >

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/service_label"
                        android:textSize="20sp"
                        android:padding="3dip" />
                    <TextView
                        android:text="@string/telephone_label"
                        android:textSize="20sp"
                        android:gravity="end"
                        android:paddingRight="5dp"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/local_police_label"
                        style="@style/table_row"
                        />
                    <TextView
                        android:text="@string/local_police"
                        android:gravity="end"
                        style="@style/table_row"
                        android:id="@+id/local_police"

                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/woman_helpline_label"
                        style="@style/table_row" />
                    <TextView
                        android:text="@string/woman_helpline"
                        android:gravity="end"
                        style="@style/table_row"
                        android:id="@+id/woman_helpline"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/cm_helpline_label"
                        style="@style/table_row" />
                    <TextView
                        android:text="@string/cm_helpline"
                        android:gravity="end"
                        android:id="@+id/cm_helpline"
                        style="@style/table_row" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/railway_enquiry_label"
                        style="@style/table_row" />
                    <TextView
                        android:text="@string/railway_enquiry"
                        android:gravity="end"
                        android:id="@+id/railway_enquiry"
                        style="@style/table_row" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/emergency_response_label"
                        style="@style/table_row" />
                    <TextView
                        android:text="@string/emergency_response"
                        android:gravity="end"
                        android:id="@+id/emergency_response_services"
                        style="@style/table_row" />
                </TableRow>


            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/helpline_bcll_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1"
                android:padding="15dp"
                >


                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/mybus_helpline_label"
                        style="@style/table_row"
                        />
                    <TextView
                        android:text="@string/mybus_helpline1"
                        android:gravity="end"
                        style="@style/table_row"
                        android:autoLink="all"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text=""
                        style="@style/table_row" />
                    <TextView
                        android:text="@string/mybus_helpline2"
                        android:gravity="end"
                        style="@style/table_row" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/charted_bus_label"
                        style="@style/table_row" />
                    <TextView
                        android:text="@string/charted_bus_helpline"
                        android:gravity="end"
                        style="@style/table_row" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/my_cab_label"
                        style="@style/table_row"

                        />
                    <TextView
                        android:text="@string/my_cab_helpline"
                        android:gravity="end"
                        style="@style/table_row"

                        />
                </TableRow>


            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/office_loaction_label"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                />

            <TextView
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/brts_office"

                style="@style/table_row"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>