<?xml version="1.0" encoding="utf-8"?>



    <!-- android:background="@drawable/green_at_ground_all" -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:clipToPadding="false"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/brts_info"
                android:text="@string/title_activity_about_brts"
                android:textSize="25sp"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_launche"
                    style="@style/AboutTextItem"
                    android:id="@+id/bhopal_brts"
                    android:contentDescription="@string/about_bhopal_brts"
                    />
                <View

                    style="@style/AboutDividerItem"
                    android:layout_width="fill_parent"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_label"
                    style="@style/AboutTextItem"
                    android:id="@+id/contact_brts"
                    android:contentDescription="@string/contact_brts"

                    />
                <View

                    style="@style/AboutDividerItem"
                    android:layout_width="fill_parent"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tc_label"
                    style="@style/AboutTextItem"
                    android:id="@+id/tandc"
                    android:contentDescription="@string/viewtandc"
                    />
                <View

                    style="@style/AboutDividerItem"
                    android:layout_width="fill_parent"

                    />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_about_devloper"
                android:textSize="25sp"
                android:textColor="@color/secondary"
                android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_label"
                    style="@style/AboutTextItem"
                    android:id="@+id/about_us"
                    android:contentDescription="@string/about_developers"
                    />
                <View
                    android:id="@+id/divider"
                    style="@style/AboutDividerItem"
                    android:layout_width="fill_parent"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contactus_label"
                    style="@style/AboutTextItem"
                    android:id="@+id/contact_us"
                    android:contentDescription="@string/contact_developers"
                    />
                <View

                    style="@style/AboutDividerItem"
                    android:layout_width="fill_parent"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanku_label"
                    style="@style/AboutTextItem"
                    android:id="@+id/thanku"
                    />
                <View

                    style="@style/AboutDividerItem"
                    android:layout_width="fill_parent"

                    />




        </LinearLayout>

    </ScrollView>
