<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textSize="35sp"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:gravity="center_horizontal"
        android:typeface="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_detail"
        android:id="@+id/contact_us_detail"
        android:layout_marginTop="15dp"
        android:autoLink="all"
        android:textSize="18sp"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_post"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_alam_detail"
        android:id="@+id/contact_alam_detail"
        android:layout_marginTop="15dp"
        android:autoLink="all"
        android:textSize="18sp"
        />

</LinearLayout>