<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignLeft="@id/tableRowFrom"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"

               >

    <!---  android:background="@drawable/green_at_ground_all" -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        >
        <RelativeLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableRow
                android:gravity="center_horizontal"
                android:id="@+id/faretableRowFrom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="right"
                    android:id="@+id/faretextViewFrom"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/From"
                    android:layout_weight="11.0" />
                <FrameLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3.0dip"
                    android:layout_weight="50.0"
                    android:layout_toRightOf="@id/faretextViewFrom">
                    <AutoCompleteTextView
                        android:textSize="15.0sp"
                        android:id="@+id/fareautoCompleteTextViewFindRouteFrom"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_startst"
                        android:singleLine="true"
                        android:inputType="textVisiblePassword"
                    />
                    <!--style="@style/EditTextlightcool"-->
                    <ImageView
                        android:layout_gravity="center|right"
                        android:id="@+id/fareimageViewCancleFrom"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6.0dip"
                        android:src="@drawable/ic_cancel_black_24dp" />
                </FrameLayout>
                <Button
                    android:id="@+id/farebuttonFindRouteFrom"
                    android:background="@drawable/arrow_red_solid"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_marginLeft="8.0dip"
                    android:layout_toRightOf="@id/fareautoCompleteTextViewFindRouteFrom"

                    style="?android:attr/buttonStyleSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/faretableRowTo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/faretableRowFrom">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="right" android:id="@+id/faretextViewTo"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/To"
                    android:layout_weight="11.0" />
                <FrameLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3.0dip"
                    android:layout_weight="50.0"
                    android:layout_toRightOf="@id/textViewTo">
                    <AutoCompleteTextView
                        android:textSize="15.0sp"
                        android:inputType="textVisiblePassword"
                        android:id="@+id/fareautoCompleteTextViewFindRouteTo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_destst"
                        android:singleLine="true"
                        android:imeOptions="actionSearch"
                        />
                    <!--style="@style/EditTextlightcool"-->
                    <ImageView
                        android:layout_gravity="center|right"
                        android:id="@+id/fareimageViewCancleTo"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6.0dip"
                        android:src="@drawable/ic_cancel_black_24dp" />
                </FrameLayout>
                <Button
                    android:id="@+id/farebuttonFindRouteTo"
                    android:background="@drawable/arrow_red_solid"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_marginLeft="8.0dip"
                    android:layout_toRightOf="@id/fareautoCompleteTextViewFindRouteTo"
                    style="?android:attr/buttonStyleSmall" />
            </TableRow>

            <RelativeLayout
                android:id="@+id/faretableRowButtonBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/faretableRowTo">
                <Button
                    android:id="@+id/farebuttonSearchRoute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getFare"
                    style="@style/ButtonMtr"
                    android:layout_alignParentRight="true"
                     />
                <!-- style="@style/Buttonlightcool"-->
            </RelativeLayout>
            <View
                android:id="@+id/faredivider"
                android:background="@color/secondary"
                android:paddingTop="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:layout_below="@id/faretableRowButtonBar" />

            <RelativeLayout
                android:id="@+id/relativeLayoutFare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:layout_below="@id/faredivider">
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:id="@+id/textViewFare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fare"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" />
                <TextView
                    android:textSize="50.0sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:gravity="center_vertical"
                    android:id="@+id/textViewFareRupee"
                    android:paddingTop="10.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="`"
                    android:layout_below="@id/textViewFare"
                    android:layout_alignParentRight="true" />
                <TextView
                    android:textSize="50.0sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/textViewFareAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:layout_toLeftOf="@id/textViewFareRupee"
                    android:layout_toStartOf="@id/textViewFareRupee"
                    android:layout_below="@id/textViewFare" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Via Heaven"
                android:id="@+id/viaholder"
                android:layout_below="@+id/relativeLayoutFare"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="25dp" />


        </RelativeLayout>
    </ScrollView>

    </LinearLayout>

